change dependabot daily checks to monthly